force-app/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Asset__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions_20180510143851515</relationshipName>
    <type>Lookup</type>
</CustomField>