force-app/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Authorize__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Authorize__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the Transaction gets Authorized (not Captured).</description>
    <inlineHelpText>If checked, the Transaction gets Authorized (not Captured).</inlineHelpText>
    <label>Authorize</label>
    <type>Checkbox</type>
</CustomField>