force-app/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Authorize_Only__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Authorize_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authorize Only</label>
    <type>Checkbox</type>
</CustomField>