force-app/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Cancel_Payout__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Cancel_Payout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel Payout</label>
    <type>Checkbox</type>
</CustomField>