force-app/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Checkout_Submission__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Checkout_Submission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Checkout Submission</label>
    <referenceTo>bt_stripe__Checkout_Submission__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>