force-app/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Due_Date__c</fullName>
    <inlineHelpText>Due date of the transaction. If Auto-Process is checked, this field is required.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>