force-app/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Fraud_Type__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Fraud_Type__c</fullName>
    <description>Assessments reported by your company are set to &apos;User&apos; or if auto-generated from Stripe then &apos;Stripe&apos;.</description>
    <inlineHelpText>Assessments reported by your company are set to &apos;User&apos; or if auto-generated from Stripe then &apos;Stripe&apos;.</inlineHelpText>
    <label>Fraud Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Stripe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>