force-app/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Late_By_Days__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Late_By_Days__c</fullName>
    <formula>If (ISPICKVAL(  bt_stripe__Transaction_Status__c  ,&apos;Open&apos;)&amp;&amp;(today()-  bt_stripe__Due_Date__c )&gt;0,today()- bt_stripe__Due_Date__c,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field, displays the number of days between today&apos;s date and the due date. Only populates when Transaction Status equals &apos;Open&apos;.</inlineHelpText>
    <label>Late By (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>