force-app/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Mobile_Skip_Intro_Screen__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Mobile_Skip_Intro_Screen__c</fullName>
    <inlineHelpText>Used by the mobile app to determine if the Intro Screen that shows Amount, Currency, Descrption, etc. should be displayed. Set value to Yes to not show this page.</inlineHelpText>
    <label>Mobile Skip Intro Screen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>