force-app/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Non_Stripe__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Non_Stripe__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Transactions will process through Stripe unless this box is checked. An example is if you receive a check or want to record a wire transfer, you&apos;d check this box and have the Transaction Record Type of &quot;Charge&quot;.</inlineHelpText>
    <label>Non-Gateway</label>
    <type>Checkbox</type>
</CustomField>