force-app/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Original_Transaction_If_Reversal__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Original_Transaction_If_Reversal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Transaction (If Reversal)</label>
    <referenceTo>bt_stripe__Transaction__c</referenceTo>
    <relationshipLabel>Reversals</relationshipLabel>
    <relationshipName>Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>