force-app/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Paid_By_Days__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Paid_By_Days__c</fullName>
    <formula>If(ISPICKVAL( bt_stripe__Transaction_Status__c ,&apos;Completed&apos;) &amp;&amp; ISPICKVAL( bt_stripe__Payment_Status__c ,&apos;Captured&apos;), 
datevalue(bt_stripe__Processed_Date__c) - If(!ISBLANK(bt_stripe__Due_Date__c),bt_stripe__Due_Date__c, datevalue(CreatedDate)) , 
NULL 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula Field, displays the number of days between Processed Date and Due Date (or Created Date when Due Date is empty).  Only populates when Transaction Status equals &apos;Completed&apos; and Payment Status equals &apos;Captured&apos;.</inlineHelpText>
    <label>Paid By (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>