force-app/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Parent_Transaction__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Parent_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Auto-populated if a refund transaction was processed, referencing the originally captured transaction.</inlineHelpText>
    <label>Original Transaction (If Refund)</label>
    <referenceTo>bt_stripe__Transaction__c</referenceTo>
    <relationshipLabel>Refunds</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>