force-app/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Payment_Method_Holder_s_Name__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Payment_Method_Holder_s_Name__c</fullName>
    <label>Payment Method Holder&apos;s Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>