force-app/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Payment_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Schedule</label>
    <referenceTo>bt_stripe__Payment_Schedule__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>