force-app/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Payment_Status__c</fullName>
    <inlineHelpText>Displays the state of the funds. Payment Status is only applicable when Transaction Status is &apos;Completed&apos;. Authorized funds will be &apos;Uncaptured&apos; after 7 days if not captured.</inlineHelpText>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Authorized</fullName>
            </value>
            <value>
                <fullName>Captured</fullName>
            </value>
            <value>
                <fullName>Partially Captured</fullName>
            </value>
            <value>
                <fullName>Refunded</fullName>
            </value>
            <value>
                <fullName>Partially Refunded</fullName>
            </value>
            <value>
                <fullName>Uncaptured</fullName>
            </value>
            <value>
                <fullName>Disputed</fullName>
            </value>
            <value>
                <fullName>Dispute Warning</fullName>
            </value>
            <value>
                <fullName>In Transit</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Transferred</fullName>
            </value>
            <value>
                <fullName>Partially Reversed</fullName>
            </value>
            <value>
                <fullName>Reversed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>