force-app/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Payout_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Payout_Created_Date__c</fullName>
    <description>Date the payout is created.</description>
    <inlineHelpText>Date the payout is created.</inlineHelpText>
    <label>Payout Created Date</label>
    <type>Date</type>
</CustomField>