force-app/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Payout_Destination_Type__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Payout_Destination_Type__c</fullName>
    <description>The type of account this Payout is sent to, such as a debit card or bank account. May be to a Payment Method (your Connected Account&apos;s debit card or bank account, or to a Payment Gateway such as your own bank account).</description>
    <inlineHelpText>The type of account this Payout is sent to, such as a debit card or bank account. May be to a Payment Method (your Connected Account&apos;s debit card or bank account, or to a Payment Gateway such as your own bank account).</inlineHelpText>
    <label>Payout Destination Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>Bank Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>