force-app/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Payout_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Payout_Processed_Date__c</fullName>
    <inlineHelpText>The Date/Time a Payout Transaction was processed to related it to Charges and Transfers</inlineHelpText>
    <label>Payout Processed Date</label>
    <type>DateTime</type>
</CustomField>