force-app/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Payout_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Payout_Source_Type__c</fullName>
    <description>The source balance this Payout came from.</description>
    <inlineHelpText>The source balance this Payout came from.</inlineHelpText>
    <label>Payout Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>Bank Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>