force-app/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Process_with_Transfer_Group__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Process_with_Transfer_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, sends the Transfer Group ID with the Stripe callout, adding this Transaction to the related Transfer Group. Charges and Transfers comprise a Transfer Group.</description>
    <inlineHelpText>When checked, sends the Transfer Group ID with the Stripe callout, adding this Transaction to the related Transfer Group. Charges and Transfers comprise a Transfer Group.</inlineHelpText>
    <label>Process with Transfer Group</label>
    <type>Checkbox</type>
</CustomField>