force-app/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Processed_Date__c</fullName>
    <inlineHelpText>The date this transaction was processed. Set automatically.</inlineHelpText>
    <label>Processed Date</label>
    <type>DateTime</type>
</CustomField>