force-app/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Receipt_Email__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Receipt_Email__c</fullName>
    <description>The email address to send this transaction&apos;s receipt to. This will send directly from Stripe.</description>
    <inlineHelpText>The email address to send this transaction&apos;s receipt to. This will send directly from Stripe.</inlineHelpText>
    <label>Receipt Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>