force-app/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Refund__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Refund__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the Transaction gets Refunded.</description>
    <inlineHelpText>If checked, the Transaction gets Refunded.</inlineHelpText>
    <label>Refund</label>
    <type>Checkbox</type>
</CustomField>