force-app/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Related_Account__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Salesforce Account related to this Transaction. (Optional)</description>
    <inlineHelpText>The Salesforce Account related to this Transaction. (Optional)</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>P360_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>