force-app/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Related_Lead__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Related_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Salesforce Lead related to this Transaction. (Optional)</description>
    <inlineHelpText>The Salesforce Lead related to this Transaction. (Optional)</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>